@@ -1,3 +1,8 @@
+Thu Jan 22 23:33:24 CET 2009 Christian Anthon <anthon@kiku.dk>
+
+	* eval.c, rollout.c: Stop adding noise to EvalOver and to the variance
+	reduction. 
+
 Thu Jan 22 12:42:57 CET 2009 Christian Anthon <anthon@kiku.dk>
 
 	* relational.c: Asume that sql always uses . for decimal separator in
